kubernetes/deployment-api.yml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: api
spec: 
  replicas: #{NUM_POD_REPLICAS}# 
  selector: 
    matchLabels: 
      app: api
  template: 
    metadata: 
      labels: 
        app: api
    spec:
      containers: 
      - name: api
        image: #{AZURE_ACR_NAME}#.azurecr.io/cloudcarboncalculator/api:e42e7232c55bb1a3de484d998127f731a382f7c7
        ports: 
        - containerPort: 4000
---
apiVersion: v1 
kind: Service 
metadata: 
  name: api
spec: 
  type: ClusterIP 
  ports: 
  - protocol: TCP 
    port: 4000
    targetPort: 4000
  selector: 
    app: api
