kubernetes/deployment-client.yml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: client
spec: 
  replicas: #{NUM_POD_REPLICAS}# 
  selector: 
    matchLabels: 
      app: client
  template: 
    metadata: 
      labels: 
        app: client
    spec:
      containers: 
      - name: client
        image: #{AZURE_ACR_NAME}#.azurecr.io/cloudcarboncalculator/client:5a02120230857c6d056c25b1bac82c328c9b2546
        ports: 
        - containerPort: 80
---
apiVersion: v1 
kind: Service 
metadata: 
  name: client
spec: 
  type: LoadBalancer 
  ports: 
  - protocol: TCP 
    port: 80 
    targetPort: 80
  selector: 
    app: client
