kubernetes/deployment.yml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: #{APP_NAME}# 
spec: 
  replicas: #{NUM_POD_REPLICAS}# 
  selector: 
    matchLabels: 
      app: #{APP_NAME}# 
  template: 
    metadata: 
      labels: 
        app: #{APP_NAME}# 
    spec:
      containers: 
      - name: #{APP_NAME}# 
        image: #{AZURE_ACR_NAME}#.azurecr.io/cloudcarboncalculator/client
        ports: 
        - containerPort: #{CONTAINER_PORT}# 
---
apiVersion: v1 
kind: Service 
metadata: 
  name: #{APP_NAME}# 
spec: 
  type: ClusterIP 
  ports: 
  - protocol: TCP 
    port: #{PORT}# 
    targetPort: #{TARGET_PORT}# 
  selector: 
    app: #{APP_NAME}#
